micro2/service.yml
kind: Service
apiVersion: v1
metadata:
  name: micro2
spec:
  selector:
    app: micro2
  ports:
  - protocol: TCP
    port: 8080
  type: NodePort
